Update Homework Week 2.ipynb

--- a/Homework Week 2.ipynb
+++ b/Homework Week 2.ipynb
@@ -33,10 +33,10 @@
    },
    "outputs": [],
    "source": [
-   "println('')",
-   "println('  |  |  ')",
-   "println('--------')",
-   "println('  |  |  ')"
+   "println('')\n",
+   "println('  |  |  ')\n",
+   "println('--------')\n",
+   "println('  |  |  ')\n"
    ]
   },
   {
