Update Homework Week 2.ipynb

--- a/Homework Week 2.ipynb
+++ b/Homework Week 2.ipynb
@@ -36,6 +36,8 @@
    "println('')\n",
    "println('  |  |  ')\n",
    "println('--------')\n",
+   "println('  |  |  ')\n",
+   "println('--------')\n",
    "println('  |  |  ')\n"
    ]
   },
