Update Homework Week 2.ipynb

--- a/Homework Week 2.ipynb
+++ b/Homework Week 2.ipynb
@@ -45,7 +45,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now do it using variables"
+    "Now do it using variables\n",
+    "x = '  |  |  '\n",
+    "y = '--------'\n",
+    "println(x)\n",
+    "println(y)\n"
    ]
   },
   {
