Update Homework Week 2.ipynb

--- a/Homework Week 2.ipynb
+++ b/Homework Week 2.ipynb
@@ -45,11 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now do it using variables\n",
-    "x = '  |  |  '\n",
-    "y = '--------'\n",
-    "println(x)\n",
-    "println(y)\n"
+    "Now do it using variables",
    ]
   },
   {
@@ -59,7 +55,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x = '  |  |  '\n",
+    "y = '--------'\n",
+    "println(x)\n",
+    "println(y)\n"
+   ]
   },
   {
    "cell_type": "markdown",
