Update Homework Week 2.ipynb

--- a/Homework Week 2.ipynb
+++ b/Homework Week 2.ipynb
@@ -59,7 +59,10 @@
     "x = '  |  |  '\n",
     "y = '--------'\n",
     "println(x)\n",
-    "println(y)\n"
+    "println(y)\n",
+    "println(x)\n",
+    "println(y)\n",
+    "println(x)\n"
    ]
   },
   {
