Update Homework Week 2.ipynb

--- a/Homework Week 2.ipynb
+++ b/Homework Week 2.ipynb
@@ -83,7 +83,11 @@
     "x = 54\n",
     "y = 23\n",
     "\n",
-    "#your code...\n"
+    "#your code...\n",
+    "if x>y: \n",
+    "println(x)\n",
+    "else: \n",
+    "println(y)\n"
    ]
   },
   {
