Update Homework Week 2.ipynb

--- a/Homework Week 2.ipynb
+++ b/Homework Week 2.ipynb
@@ -109,7 +109,13 @@
     "y = 23\n",
     "z = 4\n",
     "\n",
-    "#your code...\n"
+    "#your code...\n",
+    "if x>y and x>z:/n",
+    "println(x)/n",
+    "else if y>x and y>z:\n",
+    "println(y)\n",
+    "else:\n",
+    "println(z)\n"
    ]
   },
   {
