Update Homework Week 2.ipynb

--- a/Homework Week 2.ipynb
+++ b/Homework Week 2.ipynb
@@ -110,9 +110,9 @@
     "z = 4\n",
     "\n",
     "#your code...\n",
-    "if x>y and x>z:/n",
-    "println(x)/n",
-    "else if y>x and y>z:\n",
+    "if x>y and x>z: /n",
+    "println(x) \n",
+    "elif y>x and y>z: \n",
     "println(y)\n",
     "else:\n",
     "println(z)\n"
