Update Homework Week 2.ipynb

--- a/Homework Week 2.ipynb
+++ b/Homework Week 2.ipynb
@@ -110,7 +110,7 @@
     "z = 4\n",
     "\n",
     "#your code...\n",
-    "if x>y and x>z: /n",
+    "if x>y and x>z: \n",
     "println(x) \n",
     "elif y>x and y>z: \n",
     "println(y)\n",
