Update Homework Week 2.ipynb

--- a/Homework Week 2.ipynb
+++ b/Homework Week 2.ipynb
@@ -209,7 +209,21 @@
     "Take one down, pass it around, 97 bottles of beer on the wall.\n",
     "...\n",
     "no more bottles of beer on the wall.\n"
-   ]
+   ] 
+   for (i = 99 ; i > 0 ; i--) {
+     s = i + " " + container + " of beer on the wall, " +
+         i + " " + container + " of beer, " +
+         "take 1 down, pass it around,";
+      next = i - 1;
+      if (next > 0) {
+        if (next == 1) {
+           container = "bottle";
+        }
+        s = s + next + " " + container + " of beer on the wall.";
+     } else {
+         s = s + "No more bottles of beer on the wall!";
+     }
+     System.out.println(s);
   },
   {
    "cell_type": "code",
